# azure-iot-gateway-sdk

./: .gitignore  CMakeLists.txt
bindings/dotnet/dotnet-binding/: dotnet-binding.sln
bindings/dotnet/dotnet-binding/Common/: BOM.cs  Common.csproj  StreamAnalyticsQuery.txt  bom.json  productionTargets.json
bindings/dotnet/dotnet-binding/Common/Properties/: AssemblyInfo.cs
bindings/dotnet/dotnet-binding/EventHubModule/: DotNetEventHubModule.cs  EventHubModule.csproj  packages.config
bindings/dotnet/dotnet-binding/EventHubModule/Properties/: AssemblyInfo.cs
bindings/dotnet/dotnet-binding/InventoryModule/: DotNetInventoryModule.cs  InventoryModule.csproj
bindings/dotnet/dotnet-binding/InventoryModule/Properties/: AssemblyInfo.cs
bindings/dotnet/dotnet-binding/Microsoft.Azure.IoT.Gateway/: Microsoft.Azure.IoT.Gateway.csproj  dotnet_binding_sample.json
bindings/dotnet/dotnet-binding/PrinterModule/: DotNetPrinterModule.cs  PrinterModule.csproj
bindings/dotnet/dotnet-binding/SensorModule/: DotNetSensorModule.cs  SensorModule.csproj
iothub_local/: CMakeLists.txt
iothub_local/doc/: iothub_local.vsdx
iothub_local/inc/iothub_local/: iothub.h  iothub_auth.h  iothub_device_messaging.h  iothub_device_registry.h  iothub_http.h  iothub_local.h  iothub_syncronizer.h
iothub_local/src/: iothub.c  iothub_auth.c  iothub_device_messaging.c  iothub_device_registry.c  iothub_http.c  iothub_local.c  iothub_message.c  iothub_syncronizer.c
